just changed icon in index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-   <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,
-<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='green'>
-  <path d='M19 11h-6V5h-2v6H5v2h6v6h2v-6h6z'/>
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,
+<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='teal'>
+  <path d='M6 2v6a6 6 0 0 0 12 0V2h-2v6a4 4 0 0 1-8 0V2H6zM19 15a3 3 0 1 0 0 6 3 3 0 0 0 0-6zM13 17v3a4 4 0 1 1-8 0v-3h2v3a2 2 0 1 0 4 0v-3h2z'/>
 </svg>"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
