feat: update favicon in index.html with new SVG design

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,
-<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='teal'>
-  <path d='M6 2v6a6 6 0 0 0 12 0V2h-2v6a4 4 0 0 1-8 0V2H6zM19 15a3 3 0 1 0 0 6 3 3 0 0 0 0-6zM13 17v3a4 4 0 1 1-8 0v-3h2v3a2 2 0 1 0 4 0v-3h2z'/>
-</svg>"/>
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml;utf8,
+<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%237C3AED' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'>
+  <path d='M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z'/>
+  <line x1='3' y1='6' x2='21' y2='6'/>
+  <path d='M16 10a4 4 0 1 1-8 0'/>
+</svg>" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NextCart</title>
